--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1, h2, p, span {
+        @apply dark:text-dark-highlight
+    }
+}
